# shm_sync

./: CMakeLists.txt  LICENSE.txt  README.md
benchmark/: CMakeLists.txt
benchmark/blocking/: CMakeLists.txt
benchmark/blocking/Ada_TAS_MPMC/: CMakeLists.txt  adatas.adb  adatas.ads  driver_ada_tas_mpmc.adb  queue_interfaces.ads  unbounded_queues.adb  unbounded_queues.ads
benchmark/blocking/ArrayLock/: CMakeLists.txt  arraylock.h  arraylock_ar.cpp  arraylock_sc.cpp  driver.cpp
benchmark/blocking/C++11MutexLock/: CMakeLists.txt  cpp11_mutex_lock.cpp  cpp11_mutex_lock.h  driver.cpp
benchmark/blocking/C++11MutexStack/: CMakeLists.txt  driver.cpp  mutexstack.cpp  mutexstack.h
benchmark/blocking/CLHQueueLock/: CMakeLists.txt  clhqueue_lock.h  clhqueue_lock_ar.cpp  clhqueue_lock_sc.cpp  driver.cpp
benchmark/blocking/FilterLock/: CMakeLists.txt  driver.cpp  filter_lock.h  filter_lock_ar.cpp  filter_lock_sc.cpp
benchmark/blocking/POLock/: CMakeLists.txt  driver_polock.adb  po_lock.adb  po_lock.ads
benchmark/blocking/POSIXMutexLock/: CMakeLists.txt  driver.cpp  posix_mutex_lock.cpp  posix_mutex_lock.h
benchmark/blocking/PO_FIFO_Lock/: CMakeLists.txt  driver_po_fifo_lock.adb  po_fifo_lock.adb  po_fifo_lock.ads
benchmark/blocking/PetersonLock/: CMakeLists.txt  driver.cpp  peterson_lock.h  peterson_lock_ar.cpp  peterson_lock_sc.cpp
benchmark/blocking/TASLock/: CMakeLists.txt  driver.cpp  taslock.h  taslock_ar.cpp  taslock_sc.cpp
benchmark/blocking/TATASLock/: CMakeLists.txt  driver.cpp  tatas_lock.h  tatas_lock_ar.cpp  tatas_lock_sc.cpp
benchmark/blocking/Taubenfeld/: CMakeLists.txt  README.md  driver.cpp  fair_lock.h  fair_lock_ar.cpp  fair_lock_sc.cpp
benchmark/blocking/monitors/: CMakeLists.txt
benchmark/blocking/monitors/Ada/: CMakeLists.txt  adapo.adb  adapo.ads  driver_ada_po_mpmc.adb
benchmark/nonblocking/: CMakeLists.txt
benchmark/nonblocking/AdaLockfree/: CMakeLists.txt  README.md  adalockfree.adb  adalockfree_16.adb  driver_adalockfree.adb  driver_adalockfree.ads  queue_interfaces.ads
benchmark/nonblocking/AdaLockfree/CAS_16/: unbounded_queues.adb  unbounded_queues.ads
benchmark/nonblocking/AdaLockfree/CAS_8/: unbounded_queues.adb  unbounded_queues.ads
benchmark/nonblocking/BQueue/: CMakeLists.txt  README.md  bqueue.cpp  bqueue.h  driver.cpp  fifo.c  fifo.h
benchmark/nonblocking/BoostMPMC/: CMakeLists.txt  README.md  boost_mpmc.cpp  boost_mpmc.h  driver.cpp
benchmark/nonblocking/BoostSPSC/: CMakeLists.txt  README.md  boost_spsc.cpp  boost_spsc.h  driver.cpp
benchmark/nonblocking/COstack/: CMakeLists.txt  COstack.h  COstack_ar.cpp  COstack_sc.cpp  driver.cpp  driver.h
benchmark/tsx/: CMakeLists.txt
benchmark/tsx/CMD_Args/: CMakeLists.txt  cmd_args.adb
benchmark/tsx/DiningPhilosophers/: CMakeLists.txt  driver_dp.adb
benchmark/tsx/GNARL_patch/: GNARL_PO_Elision.patch  README
benchmark/tsx/HashTable/: CMakeLists.txt  driver_hashtable.adb  hash_table.adb  hash_table.ads
benchmark/tsx/kmeans/: CMakeLists.txt  cluster.adb  driver_kmeans.adb
cmake/Modules/: CMakeAdaInformation.cmake  FindLikwid.cmake  FindPython3.cmake
common/: CMakeLists.txt
common/ada_binding/: CMakeLists.txt
common/ada_binding/barrier/: CMakeLists.txt  barrier_binding.adb  barrier_binding.ads
common/ada_binding/papi/: CMakeLists.txt  binding.cpp  papi_binding.adb  papi_binding.ads
common/ada_binding/stats/: CMakeLists.txt  binding.cpp  stats_binding.adb  stats_binding.ads
common/ada_binding/timer/: CMakeLists.txt  timer_binding.adb  timer_binding.ads
common/atomic_intrinsic/: CMakeLists.txt
common/atomic_intrinsic/ada/: CMakeLists.txt  atomic_intrinsic.adb  atomic_intrinsic.ads  fences.ads  fences_aarch64.adb  fences_x86_64.adb  gcc_atomics.c
common/atomic_intrinsic/c++/: fences.h  fences_aarch64.h  fences_x86_64.h
common/barrier/: CMakeLists.txt  barrier.cpp  barrier.h
common/hazard_pointers/: README.md  hazard_pointers.hpp
common/include/: globals.h
common/stats/: CMakeLists.txt  color_term.cpp  color_term.h  log.cpp  log.h  smpl_collector.cpp  smpl_collector.h  stats.cpp  stats.h
common/tagged_pointers/: CMakeLists.txt  tagged.c  tagged_pointers.adb  tagged_pointers.ads
common/timer/: CMakeLists.txt  timer.h  timer_x86.cpp
ext/cxxopts/: CMakeLists.txt
scripts/run/: CMakeLists.txt  Drawing.py  record.sh  run.py  sample_ArrayLock.txt  sample_CLHQueueLock.txt  sample_TATASLock.txt  settings.py  statistics.r  util.py
tests/: CMakeLists.txt
tests/color_term/: CMakeLists.txt  color_driver.cpp
tests/fences/: CMakeLists.txt  fence_test.cpp
tests/stats/: CMakeLists.txt  stats_test.cpp
